dark mode switch fix for checkbox

--- a/css/style.css
+++ b/css/style.css
@@ -485,7 +485,7 @@ label {
 	float: left;
 	font-size: 12px;
 	font-weight: 400;
-	font-family: 'Open Sans', sans-serif;
+	/* font-family: 'Open Sans', sans-serif; */
 }
 #tf-contact .form-control {
 	display: block;
